--- a/about.html
+++ b/about.html
@@ -19,12 +19,18 @@
 
     <div class="introduction">
         <div class="aboutMeTitle">
-            Hello
+            Hello!
         </div>
 
         <div class="aboutMeText">
-            My name is Cr4b and i'm a 17 year old engineer student.
-            I have projects in subjects including digital creation, engineering and more.
+            <span id="content">My name is Cr4b and i'm a 17 year old engineer student.</span>
+            <span id="content">I have projects in subjects including digital creation, engineering and more.</span>
+                
+                
+        </div>
+
+        <div class="aboutMeText">
+            I like 90s JDM cars, computers, Eurobeat and Megadeth.
         </div>
 
         <div class="aboutMeText">
@@ -35,6 +41,14 @@
             <a href="https://steamcommunity.com/profiles/76561198088334546/">Steam</a>
         </div>        
 
+        <div class="aboutMeText">
+            <a href="mailto: U212B@outlook.com">U212B@outlook.com</a>
+        </div>
     </div>
+
+    <div class="slideshow">
+        <img src="img/javascript.jpg" alt="Javascript" style="max-width: 500px;"">
+    </div>
+
 </body>
 </html>
