--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/stylesheet.css">
+    <link rel="icon" href="img/Cr4bLogo.jpg">
     <title>Cr4bStudio</title>
 </head>
 
@@ -13,23 +14,22 @@
     <nav>
         <div class="logo"></div>
         <ul class="menu">
-            <a href="about.html">
-                <img class="about-picture" src="img/aboutMeFolder.png" alt="About Me">
-            </a>
-
-            <a href="engineering.html">
-                <img class="wrench-picture" src="img/wrench.png" alt="Engineering">
-            </a>
-
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <div class="hyperlink">
+                <a href="about.html">
+                    About Me!
+                </a>     
+            </div>
+            <div class="hyperlink">
+                <a href="engineering.html">
+                    Engineering!
+                </a>  
+            </div>
+            <div class="hyperlink">
+                <a href="digitalCreation.html">
+                    digitalCreation!
+                </a>
+            </div>
         </ul>
     </nav>
-    <img src="img/Cr4bLogo.jpg" alt="Cr4bLogo">
 </body>
 </html>
