--- a/about.html
+++ b/about.html
@@ -47,8 +47,12 @@
     </div>
 
     <div class="slideshow">
-        <img src="img/javascript.jpg" alt="Javascript" style="max-width: 500px;"">
+        <img src="img/javascript.jpg" alt="Javascript" style="max-width: 500px; margin-left: 50px; border-radius: 25px;">
     </div>
+
+    <img id="myImage" src="" alt="">
+
+    <button onclick="document.getElementById('myImage').src=''">
 
 </body>
 </html>
