--- a/index.html
+++ b/index.html
@@ -10,26 +10,32 @@
     <title>Cr4bStudio</title>
 </head>
 
+<style>
+    body{
+        background-image:url(img/synthwaveBackground.jpg);
+        background-size:cover;
+    }
+</style>
+
 <body>
+    <div class="index">
     <nav>
-        <div class="logo"></div>
         <ul class="menu">
             <div class="hyperlink">
                 <a href="about.html">
-                    About Me!
+                    About Me
                 </a>     
             </div>
             <div class="hyperlink">
-                <a href="engineering.html">
-                    Engineering!
-                </a>  
-            </div>
-            <div class="hyperlink">
                 <a href="digitalCreation.html">
-                    digitalCreation!
+                    digital art
                 </a>
             </div>
         </ul>
     </nav>
+    <div class="cr4bstudio">
+        Cr4b Studio
+    </div>
+
 </body>
 </html>
